--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
+    "install-client": "cd frontend && npm install",
+    "setup-production":"npm run install-client && npm run build-client && npm install",
+    "build-client":"cd frontend && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
