--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "install-client": "cd frontend && npm install",
-    "setup-production":"npm run install-client && npm run build-client && npm install",
-    "build-client":"cd frontend && npm run build",
+    "setup-production": "npm run install-client && npm run build-client && npm install",
+    "build-client": "cd frontend && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
@@ -22,6 +22,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "socket.io": "^4.5.3",
     "validator": "^13.9.0"
